<resources>
    <string name="app_name">Jacob Lester\'s Resume</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="bio">My childhood passion for technology and video games in coordination with my developing love for coffee has lead me to study computer science. Currently, I am a dedicated student hoping to make a positive difference within an organization. I have been expanding my knowledge and experience with web design and development over the past year while creating a few websites for clients along the way.</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_theme">Theme</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="pref_title_theme">Dark Mode</string>
    <string name="pref_description_theme">Changes the theme to a dark skin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_skills">View Skills</string>
    <string name="skill_name">Skill Name</string>
    <string name="update_skill">Update Skill</string>
    <string name="skills">SKILLS</string>
    <string name="skills_subhead">Swipe a skill for options (edit/delete). Click a skill to view its details</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="add_a_skill">ADD A SKILL</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="save_skill">Save</string>
    <string name="short_description_of_skill">Short description of skill</string>
    <string name="edit_skill">EDIT SKILL</string>

</resources>
