<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_information"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lester.jacob.lester_resume.Activities.InformationActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bioImage"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:tag="1"
        android:src="@drawable/slider1"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/bioImage"
        android:layout_marginTop="20dp"
        android:id="@+id/photoControls"
        android:layout_centerHorizontal="true">

        <Button
            android:text="@string/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/prevBtn" />

        <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nextBtn" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/photoControls"
        android:layout_marginTop="20dp"
        android:id="@+id/bio">

        <TextView
            android:text="@string/bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_skills"
        android:layout_below="@+id/bio"
        android:layout_marginTop="10dp"
        android:id="@+id/viewSkillsBtn"/>


</RelativeLayout>

